--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -9,7 +9,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     opacity: .8;
-    animation: anime 300s linear infinite normal;
+    //animation: anime 300s linear infinite normal;
 }
 
 /*@keyframes anime
@@ -52,7 +52,7 @@ header {
   display: inline-block;
   line-height: 10px;
 }
-
+//
 .title {
     color: #585654;
     font-size: 15px;
@@ -111,7 +111,7 @@ input[type="submit"]:hover, #submit:hover  {
 .info {
     display: none;
      h1 {
-        color: #585654;
+        color: #2f2b2b;
         margin-left: 100px;
         margin-right: 100px;
         padding: 5px;
@@ -119,8 +119,8 @@ input[type="submit"]:hover, #submit:hover  {
         }
         .image {
             display: none;
-            width: 150px;
-            height: 75px;
+            width: 200px;
+            height: 100px;
             margin-left: 140px;
         }
         p {
@@ -131,6 +131,7 @@ input[type="submit"]:hover, #submit:hover  {
         font-size: 17px;
         border-radius: 5px;
         width: 760px;
+        color: #2f2b2b;
         }
 }
 
@@ -147,70 +148,21 @@ p:nth-of-type(2n+2) {
     background: #bcbcbc;
     display: none;
 }
-//rwd
-@media (max-width: 640px) {
-    .container {
-        width: 500px;
-    }
-    header {
-        height: 50px;
-        padding-top: 10px;
-    }
-    .heading {
-      font-weight: 300;
-      font-size: 20px;
 
-    }
-    .search_info {
-        height: 50px;
-    }
+.ending {
+    height: 50px;
+    background-color: #a9a197;
+    //position: fixed;
+    bottom: 0;
+    margin-top: 20px;
+    display: none;
+}
+.ending h3 {
+    display: inline-block;
+    float: right;
+    color: #f1eeea;
+    margin: 10px;
+    padding-right: 50px;
+    font-family: 'Pacifico', cursive;
 
-    .search_map {
-        height: 50px;
-    }
-    #find, #address {
-        width: 250px;
-        height: 40px;
-        margin-left: 50px;
-        font-size: 15px;
-        padding-left: 10px;
-    }
-    input[type="submit"], #submit {
-        width: 100px;
-        height: 40px;
-        margin-top: 25px;
-        margin-left: 30px;
-        font-size: 15px;
-    }
-    .title {
-        font-size: 10px;
-    }
-    .info {
-        display: none;
-         h1 {
-            margin-left: 50px;
-            margin-right: 50px;
-            padding-top: 20px;
-            font-size: 20px;
-            }
-            .image {
-                width: 100px;
-                height: 40px;
-                margin-left: 50px;
-            }
-            p {
-            margin-left: 50px;
-            margin-right: 50px;
-            padding: 5px;
-            font-weight: bold;
-            font-size: 10px;
-            border-radius: 5px;
-            width: 400px;
-            }
-    }
-    .map {
-        height: 300px;
-        width: 500px;
-        margin-top: 50px;
-    }
 }
